#6-CTS Add vuex for sizes
